--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 </section>
 <!-- End home page about us section -->
 <!-- Start of newsleter section -->
+<form netlify >
 <section class="home-newsletter ">
   <div class="row">
     <div class="col-12 text-center ">
@@ -201,7 +202,7 @@
     </div>
   </div>
 </section>
-
+</form>
 <!-- End of newsleter section -->
 <!--  -->
 <!-- Start Quality section -->
