--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
      <div class="row">
       
        <div class="col-md-6">
-         <form action="">
+         <form netlify >
            <div class="form-row">
              <div class="form-group col-6">
                <input type="text" class="form-control" placeholder="Full Name">
