--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
 </section>
 <!-- End home page about us section -->
 <!-- Start of newsleter section -->
-<form netlify >
+<form netlify name="newsleter" >
 <section class="home-newsletter ">
   <div class="row">
     <div class="col-12 text-center ">
       <h3>Subscribe to Our Newsletter</h3>
       <div class="input-group container pl-5 pr-5 p-3 ">
-        <input type="email" class="form-control  " placeholder="Enter Your Email">
+        <input type="email" class="form-control  " placeholder="Enter Your Email" name="email" >
         <span class="input-group-btn">
           <button class="btn btn-theme" type="submit">Subscribe</button>
         </span>
