--- a/about.html
+++ b/about.html
@@ -105,12 +105,12 @@
   </div>
 </section>
 <!-- Start of newsleter section -->
-<section class=" home-newsletter ">
+<section class=" home-newsletter " netlify name="newsleter">
     <div class="row">
       <div class="col-12 text-center ">
         <h3>Subscribe to Our Newsletter</h3>
         <div class="input-group container  p-3  ">
-          <input type="email" class="form-control  " placeholder="Enter Your Email">
+          <input type="email" class="form-control  " placeholder="Enter Your Email" name="email">
           <span class="input-group-btn">
             <button class="btn btn-theme" type="submit">Subscribe</button>
           </span>
