--- a/about.html
+++ b/about.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="style.css">
 
     <title>About US</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5927206158756709",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
   <!-- Start header -->
