--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                       <a class="p-1" href="mailto:abc@gmail.com"> <i class="fas fa-envelope"></i> inquiry@simplesnippets.com </a>
                       <div class="embed-responsive embed-responsive-16by9" >
                       <!-- <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58482.18695102251!2d85.4784171125233!3d23.63527555187602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f4f3f4a5cf98fd%3A0xcf187bf27b7bc4e9!2sRamgarh%2+Jharkhand!5e0!3m2!1sen!2sin!4v1562862822223!5m2!1sen!2sin" frameborder="0" ></iframe>  -->
-                      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=swarajk99-21&marketplace=amazon&region=IN&placement=B07HGJFSD8&asins=B07HGJFSD8&linkId=fd19501941ebc424f1a8c2c303562c51&show_border=true&link_opens_in_new_window=true"></iframe>
+                      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=swarajk99-21&marketplace=amazon&region=IN&placement=B07HGJFSD8&asins=B07HGJFSD8&linkId=fd19501941ebc424f1a8c2c303562c51&show_border=true&link_opens_in_new_window=true"></iframe>
                          </div>
                          </div>
                   </div>
